Some initial stuff

--- a/FSModToolsManager/FSModToolsManager.csproj
+++ b/FSModToolsManager/FSModToolsManager.csproj
@@ -6,6 +6,24 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <PackageProjectUrl>https://github.com/Jiiks/FSModToolsManager</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/Jiiks/FSModToolsManager</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <AssemblyVersion>0.1.0.0</AssemblyVersion>
+    <FileVersion>$(AssemblyVersion)</FileVersion>
+	<ProductVersion>$(AssemblyVersion)</ProductVersion>
+    <SignAssembly>False</SignAssembly>
+	  
   </PropertyGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="config.json">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	</ItemGroup>
 
 </Project>
