--- a/FSModToolsManager/FSModToolsManager.csproj
+++ b/FSModToolsManager/FSModToolsManager.csproj
@@ -44,6 +44,9 @@
 	  <None Update="config.json">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </None>
+	  <None Update="Images\game_icon_er.png">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 
 </Project>
